<resources>
    <string name="app_name">E-Commerce</string>
    <string name="title_activity_staff_login">StaffLoginActivity</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="role">Role</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_as_staff">Login As Staff</string>
    <string name="login_as_admin">Login As Admin</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="staff">Staff</string>
    <string name="admin">Admin</string>
    <string name="team_member_5">Team Member 5</string>
    <string name="add_stock">Add Stock</string>
    <string name="add_staff">Add Staff</string>
    <string name="register_staff">Register Staff</string>
    <string name="item_id">Item ID</string>
    <string name="quantity">Quantity</string>
    <string name="add_quantity">Add Quantity</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="code">Code</string>
    <string name="product_name">Product Name</string>
    <string name="stock">Stock</string>

    <string-array name="member">
        <item>Fadhilah Rizki Fatoni</item>
        <item>Fajar Wirahadi Kusuma</item>
        <item>Atifah Herawati</item>
        <item>Enok Lismawati</item>
    </string-array>

    <string-array name="member_code">
        <item>JVAN-KS05-021</item>
        <item>JVAN-KS05-007</item>
        <item>JVAN-KS05-017</item>
        <item>JVAN-KS05-019</item>
    </string-array>

    <string name="promo_title1">This</string>
    <string name="promo_title2">season\'s</string>
    <string name="promo_title3">latest</string>
    <string name="shop_now">SHOP NOW</string>
    <string name="h_m_round_neck_t_shirt_regular_fit_yellow"><![CDATA[H&M Round Neck t shirt Regular Fit Yellow]]></string>
</resources>