<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StaffLoginActivity"
    android:background="@drawable/background_auth"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/staff"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:textFontWeight="800"

        />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/username"
        android:textFontWeight="400"
        android:textColorHighlight="@color/black"
        android:textColor="@color/black"
        />

    <FrameLayout
        android:id="@+id/passwordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerInParent="true"
        >
        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:textFontWeight="400"
            android:textColorHighlight="@color/black"
            android:textColor="@color/black"

            />

        <ImageView
            android:id="@+id/passwordVisibility"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/show"
            android:layout_gravity="right|center"
            android:clickable="true"
            />
    </FrameLayout>

    <Button
        android:id="@+id/staffLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/login_as_staff"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/black"
        android:textSize="15dp"
        android:textFontWeight="800"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/staffLoginBtn"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        >
        <TextView
            android:id="@+id/moveToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="15dp"
            android:textColor="@color/blue"
            android:layout_marginHorizontal="10dp"
            android:clickable="true"
            />

        <TextView
            android:id="@+id/moveToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="15dp"
            android:textColor="@color/blue"
            android:layout_marginHorizontal="10dp"
            android:clickable="true"
            />

        <TextView
            android:id="@+id/moveToLoginAsAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_as_admin"
            android:textSize="15dp"
            android:textColor="@color/blue"
            android:layout_marginHorizontal="10dp"
            android:clickable="true"
            />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/staffLoginProgressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />
</RelativeLayout>