<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddStaffActivity"
    >

    <include layout="@layout/layout_action_bar2"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/staff"
        android:alpha="0.1"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/username"
        android:textFontWeight="400"
        android:textColorHighlight="@color/black"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textFontWeight="400" />

    <FrameLayout
        android:id="@+id/passwordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerInParent="true"
        >
        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:textFontWeight="400"
            android:textColorHighlight="@color/black"
            android:textColor="@color/black"

            />

        <ImageView
            android:id="@+id/passwordVisibility"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/show"
            android:layout_gravity="right|center"
            android:clickable="true"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/confirmPasswordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordLayout"
        android:layout_centerInParent="true"
        >
        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:layout_marginTop="10dp"
            android:textFontWeight="400"
            android:textColorHighlight="@color/black"
            android:textColor="@color/black"

            />

        <ImageView
            android:id="@+id/confirmPasswordVisibility"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/show"
            android:layout_gravity="right|center"
            android:clickable="true"
            />
    </FrameLayout>

    <Button
        android:id="@+id/staffRegisterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPasswordLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/black"
        android:text="@string/register_staff"
        android:textFontWeight="800"
        android:textSize="15dp" />


    <ProgressBar
        android:id="@+id/staffRegisterProgressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />
</RelativeLayout>
</FrameLayout>