<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddStockActivity"
    >
   <include layout="@layout/layout_action_bar2"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/stock"
        android:alpha="0.1"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/codeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:id="@+id/codeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:layout_marginHorizontal="10dp"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="code"
                android:textColor="@color/black"
                android:layout_marginHorizontal="10dp"
                android:textSize="20dp"
                />

        </LinearLayout>
      <LinearLayout
          android:id="@+id/nameLayout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_below="@+id/codeLayout"
          android:layout_marginBottom="10dp"
          >
          <TextView
              android:id="@+id/productNameLabel"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginHorizontal="10dp"
              android:text="@string/product_name"
              android:textSize="20dp"
              />

          <TextView
              android:id="@+id/productName"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="name"
              android:textColor="@color/black"
              android:textSize="20dp"
              android:layout_marginHorizontal="10dp"
              />
      </LinearLayout>

        <LinearLayout
            android:id="@+id/stockLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/nameLayout"
            >
            <TextView
                android:id="@+id/stockLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                android:layout_marginHorizontal="10dp"
                android:textSize="20dp"
                />
            <TextView
                android:id="@+id/stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="stock"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginHorizontal="10dp"
                />

        </LinearLayout>


        <EditText
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stockLayout"
            android:layout_centerInParent="true"
            android:ems="5"
            android:hint="@string/quantity"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textFontWeight="400" />


        <Button
            android:id="@+id/addQuantityBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quantity"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/black"
            android:text="@string/add_quantity"
            android:textFontWeight="800"
            android:textSize="15dp" />


        <ProgressBar
            android:id="@+id/addQuantityProgressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />
    </RelativeLayout>
</FrameLayout>